Lots of fixes all around

--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -48,14 +48,15 @@ comprehension due to the added working memory to develop an understanding of the
 sentence.
 
 Careful consideration is made that the semantic spaces that each individual word
-covers do not overlap other words although there are often more verbose ways to
-explain many of the words which can aid in clarifying intended meaning and
-allows for a clear Hisyëö to Hisyëö dictionary.
+supports do not overlap the semantic spaces of other words although there are
+some hypernyms and hyponyms for certain groups of words. There should always be
+a more verbose way to explain a word which can aid in clarifying intended
+meaning and allows for a proper Hisyëö-to-Hisyëö dictionary.
 
 
 ### Expressivity
 The language is designed to be highly expressive in its word and grammar
-choices. With just over 840 words, there's a lot more ways (compared to
+choices. With just over 850 words, there's a lot more ways (compared to
 minimalist languages) to express feelings, emotions, objects, actions and
 anything else you can think of.
 
@@ -123,8 +124,8 @@ write a few basic sentences.
 - x as in a**sh** or ra**t**ion
 - d as in **d**ig or ba**d** 
 - z as in **j**og or a**g**e
-- p as in **p**oke or si**p**
-- v as in **v**alid or ga**v**el
+- b as in **b**ear or a**b**bey
+- f as in **f**ather or a**f**fluent
 - m as in la**m**b or **m**ineral
 - n as in **n**od or ba**n**
 - w as in **w**eep or a**w**ake
