--- a/docs/lessons/first-steps.mdx
+++ b/docs/lessons/first-steps.mdx
@@ -46,36 +46,43 @@ verb, or modifier so there's a good chance it will be used in a way that seems
 wrong to your native language's grammar.
 
 **This is okay.** Try to focus on the essence of that native language word,
-imagine it being translated as the other parts of speech. Now think of the
-Hisyëö word as covering all of these words. This is why we include all of the
-different derivation translations in each definition, so that you can
-familiarize yourself with all the ways it can be utilized.
+imagine it being translated as the other parts of speech (aka word classes). Now
+think of the Hisyëö word as covering **all** of these words. This is why we
+include all of the different derivation translations in each definition, so that
+you can familiarize yourself with all the ways it can be utilized. The preceding
+word in the sentence will tell you which derivation is being expressed.
 
 :::
+
+## Art Language
 
 It's also an art language because it has taken the core of Kokanu and added many
 aesthetic, syntactic, and semantic ideas that allow it to be used as an everyday
 communication platform right now albeit with a starting "culture" in a similar
 way to how art language creators establish history to explain their language's
-idiosyncracies. The culture of Hisyëö is a representation of what the creators
-believe to be
+idiosyncracies. The cultural lexicon of Hisyëö is a representation of what the
+creators believe to be
 - the fundamentals of a modern democratic society
 - the necessary critical tools to authentically discuss bad things
 - lastly, a fun and whimsical inclination that tries to bring some uniqueness
 
 That being said, there are no mythological stories to anchor you like you might
-find in a natural society. Because of this, there's a risk that these ideas will
-fade as the language gains a true living culture. The community must remain
-vigilant that the things that make Hisyëö great never fade but they must also be
-ever watchful for aspects of the culture that bring negativity or fascism.
+find in a natural society (and in artlangs). Because of this, there's a risk
+that these ideas will fade as the language gains a true living culture. The
+community must remain vigilant that the things that make Hisyëö great never fade
+but they must also be ever watchful for aspects of the culture that bring
+negativity or fascism. Hopefully, with time, stories will be written and printed
+for broad circulation.
 
 ## Common Expressions
 
-One important first step to engaging with a new culture is to learn the common
-phrases that are the lifeblood of any encounter. These words sometimes take on
-additional roles as interjections and simple sentences. Learning these will make
-it much easier to engage in polite and impolite conversation and get your feet
-wet so that you can begin your immersion training.
+Until there are volumes of Hisyëö writings to consume, we will have to make due
+with oral communication. The first step on the road to oral communication is to
+learn the common phrases that are the lifeblood of any encounter with a Hisyëö
+speaker. These words sometimes take on additional roles as interjections and
+simple sentences. Learning these will make it much easier to engage in polite
+and impolite conversation and get your feet wet so that you can begin your
+immersion training.
 
 :::info Examples
 
@@ -188,13 +195,13 @@ be too difficult to differentiate.
 - as in **j**og or a**g**e
 - can also be alveolar or retroflex: [d͡ʑ], [ɖ͡ʐ]
 
-##### p - voiceless bilabial plosive [p]
-- as in **p**oke or si**p**
-- can be either voiceless or voiced [b]
+##### b - voiced bilabial plosive [b]
+- as in **b**rown or ji**b**
+- can be either voiced or voiceless [p]
 
-##### v - voiced labiodental fricative [v]
-- as in **v**alid or ga**v**el
-- can be either voiced or voiceless [f]
+##### f - voiceless labiodental fricative [f]
+- as in **f**ree or ba**ff**le
+- can be either voiceless or voiced [v]
 
 ##### m - voiced bilabial nasal [m]
 - as in la**m**b or **m**ineral
