--- a/docs/lessons/numbers-dates-time.mdx
+++ b/docs/lessons/numbers-dates-time.mdx
@@ -240,8 +240,7 @@ The Hisyëö week days are, unlike the rest of the calendar, named after the mos
 prevalent color of the planets of our solar system as seen in true color
 photography of the planet. The start of the week was chosen as Monday to
 coincide with the near majority of the world agreement on this and it allows
-Saturday and Sunday to be the "Weekend" (könyëc/ɔ̃ıɀ̄ʇ
-wëxön/ʒʇɋ̃ı).
+Saturday and Sunday to be the "Weekend" (<HisyeoWord is='könyëc'/> <HisyeoWord is='wëxön'/>).
 
 | Planet  | True Color Photo                                                                                                                                                                                                                                                                                                                                                                         | English   | Hisyëö                                             | Abugida                                              |
 | ------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :-------- | :------------------------------------------------- | :--------------------------------------------------- |
@@ -268,6 +267,24 @@ Asking what day of the week it is can be done by asking what color of day:
 <HisyeoTabs>
   <p>lono öfo lı longı zık.&emsp;<em>"What day is today?"</em></p>
 </HisyeoTabs>
+
+:::info Relative Days
+
+There's a few relative terms that are also highly utilized in everyday speech:
+
+<HisyeoTabs>
+  <p>düi lono öhël&emsp;<em>"2 days ago"</em></p>
+  <p>lono xe ılık lono xobëk&emsp;<em>"day before yesterday"</em></p>
+  <p>lono xobëk&emsp;<em>"yesterday"</em></p>
+  <p>lono öfo&emsp;<em>"today"</em></p>
+  <p>lono uklo&emsp;<em>"tomorrow"</em></p>
+  <p>lono xe cıhöü lono uklo&emsp;<em>"day after tomorrow"</em></p>
+  <p>düi lono mile&emsp;<em>"2 days hence"</em></p>
+  <p>lono in wëloı yë wëxön&emsp;<em>"weekday"</em></p>
+  <p>könyëc wëxön&emsp;<em>"weekend"</em></p>
+</HisyeoTabs>
+
+:::
 
 ### Months of the Year
 
