--- a/docs/works/shannon-test-sentences.mdx
+++ b/docs/works/shannon-test-sentences.mdx
@@ -22,15 +22,15 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>binton lono boifön küon bı möcibo.&emsp;<em>The sun is shining.</em></p>
 <p>binton lono boifön si küon.&emsp;<em>The sun shone.</em></p>
 <p>binton lono ke boifön küon.&emsp;<em>The sun will shine.</em></p>
-<p>binton lono cinli si kon boifön küon.&emsp;<em>The sun has been shining.</em></p>
-<p>binton lono boifön küon bı möcibo bı woküt dizel&emsp;<em>The sun is shining again.</em></p>
+<p>binton lono lı si kon boifön küon.&emsp;<em>The sun has been shining.</em></p>
+<p>binton lono boifön küon bı möcibo bı dizel&emsp;<em>The sun is shining again.</em></p>
 <p>binton lono ke boifön küon hoi lono uklo.&emsp;<em>The sun will shine tomorrow.</em></p>
 <p>binton lono boifön küon bı ëto.&emsp;<em>The sun shines brightly.</em></p>
 <p>binton lono yë küon ëto boifön küon.&emsp;<em>The bright sun shines.</em></p>
 <p>binton lono di cën bı möcibo hoi ibüdü.&emsp;<em>The sun is rising now.</em></p>
 <p>möi umo onö bı oltü öitun si.&emsp;<em>All the people shouted.</em></p>
 <p>yoüti umo bı oltü öitun si.&emsp;<em>Some of the people shouted.</em></p>
-<p>ëto umo bı oltü öitun bı düi fun.&emsp;<em>Many of the people shouted twice.</em></p>
+<p>ëto umo bı oltü öitun bı düi.&emsp;<em>Many of the people shouted twice.</em></p>
 <p>umo xowosë bı ëto bı oltü öitun.&emsp;<em>Happy people often shout.</em></p>
 <p>mocko xonluk onö tüu si zoston bı cën.&emsp;<em>The kitten jumped up.</em></p>
 <p>mocko xonluk onö tüu si zoston müt solwöc miëbıl.&emsp;<em>The kitten jumped onto the table.</em></p>
@@ -41,7 +41,7 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>niltügu si hüzon onö.&emsp;<em>The rain has stopped.</em></p>
 <p>bı zelen ke niltügu hüzon onö.&emsp;<em>Soon the rain will stop.</em></p>
 <p>noyo xiwon fos bı zelen niltügu hüzon onö.&emsp;<em>I hope the rain stops soon.</em></p>
-<p>bı kut fun ü zonwul hönyo nıwos si öfo.&emsp;<em>Once wild animals lived here.</em></p>
+<p>bı kut ü zonwul hönyo nıwos si öfo.&emsp;<em>Once wild animals lived here.</em></p>
 <p>bı dilë ü niün fohoso si ünhılun niün.&emsp;<em>Slowly she looked around.</em></p>
 <p>küu lı lö bı cok.&emsp;<em>Go away!</em></p>
 <p>nü küu lı lö.&emsp;<em>Let's go!</em></p>
@@ -61,7 +61,7 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>döcui umo yë umo wohi xonluk cüti onö lı kobüt.&emsp;<em>The little girl's doll is broken.</em></p>
 <p>noyo bı sodolun lı conzodo sunbülno.&emsp;<em>I usually sleep soundly.</em></p>
 <p>mënyüu onö bı fiki lı lö oxon xe doicël umo Zek.&emsp;<em>The children ran after Jack.</em></p>
-<p>noyo köi kelo cıhöü woküt kon bëüdo.&emsp;<em>I can play after school.</em></p>
+<p>noyo köi kelo cıhöü kon bëüdo.&emsp;<em>I can play after school.</em></p>
 <p>nü lı si lö müt sınsi oxon xe monodo.&emsp;<em>We went to the village for a visit.</em></p>
 <p>nü lı si gik hoi xüto.&emsp;<em>We arrived at the river.</em></p>
 <p>noyo motsı si bı möcibo oxon nimü.&emsp;<em>I have been waiting for you.</em></p>
