--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -91,7 +91,7 @@ a consideration. Neither translation of media nor scientific communication are
 goals of the language. This community member spent considerable time becoming
 fluent in Kokanu and enjoyed the grammatical foundation that it offered. He was
 inspired by an at-the-time new kokanido
-([koanu](https://www.parallax.net.nz/x/koanu/)) and decided to try to create his
+([koanu](https://web.archive.org/web/20231127095333/https://www.parallax.net.nz/x/koanu/)) and decided to try to create his
 own kokanido, enhancing it with some ideas taken from other constructed and
 natural languages.
 
