Fix pronunciation materials

--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -102,35 +102,49 @@ write a few basic sentences.
 
 ### Sounds
 
-*Contains US English example words.*
+If you are interested in providing words for other dialects or languages, check
+out our [IPA pronunciation guide](lessons/first-steps#pronunciation) and submit
+a patch for the [below code](https://github.com/Hisyeo/Hisyeo.github.io/edit/main/docs/intro.mdx).
 
 #### Vowels
-- o as in sl**o**t or f**a**ther
-- ö as in r**o**pe or Camb**o**dia
-- e as in b**e**d or c**a**t
-- ë as in m**a**y or f**a**ce
-- ı as in c**i**ty or w**i**ll
-- i as in happ**y** or c**ei**ling
-- u as in r**u**n or en**ou**gh
-- ü as in l**o**se, thr**ou**gh
+<Tabs groupId="tenkin-yë-yogö-lolü" queryString>
+   <TabItem value="en_us" label="US English" default>
+      <ul>
+         <li>o as in sl<b>o</b>t or f<b>a</b>ther</li>
+         <li>ö as in r<b>o</b>pe or Camb<b>o</b>dia</li>
+         <li>e as in b<b>e</b>d or c<b>a</b>t</li>
+         <li>ë as in m<b>a</b>y or f<b>a</b>ce</li>
+         <li>ı as in c<b>i</b>ty or w<b>i</b>ll</li>
+         <li>i as in happ<b>y</b> or c<b>ei</b>ling</li>
+         <li>u as in r<b>u</b>n or en<b>ou</b>gh</li>
+         <li>ü as in l<b>o</b>se, thr<b>ou</b>gh</li>
+      </ul>
+   </TabItem>
+</Tabs>
 
 #### Consonants
-- h as in **h**am or **h**old
-- k as in **c**up or sti**ck**
-- g as in **g**old or sna**g**
-- t as in **t**ip or pu**tt**
-- c as in **ch**ore or na**t**ure
-- s as in mi**s**t or i**c**e
-- x as in a**sh** or ra**t**ion
-- d as in **d**ig or ba**d** 
-- z as in **j**og or a**g**e
-- b as in **b**ear or a**b**bey
-- f as in **f**ather or a**f**fluent
-- m as in la**m**b or **m**ineral
-- n as in **n**od or ba**n**
-- w as in **w**eep or a**w**ake
-- l as in **l**inger or ba**ll**ad
-- y as in **y**earn or ma**y**o
+<Tabs groupId="tenkin-yë-yogö-lolü" queryString>
+   <TabItem value="en_us" label="US English" default>
+      <ul>
+         <li>h as in <b>h</b>am or <b>h</b>old</li>
+         <li>k as in <b>c</b>up or sti<b>ck</b></li>
+         <li>g as in <b>g</b>old or sna<b>g</b></li>
+         <li>t as in <b>t</b>ip or pu<b>tt</b></li>
+         <li>c as in <b>ch</b>ore or na<b>t</b>ure</li>
+         <li>s as in mi<b>s</b>t or i<b>c</b>e</li>
+         <li>x as in a<b>sh</b> or ra<b>t</b>ion</li>
+         <li>d as in <b>d</b>ig or ba<b>d</b> </li>
+         <li>z as in <b>j</b>og or a<b>g</b>e</li>
+         <li>b as in <b>b</b>ear or a<b>b</b>bey</li>
+         <li>f as in <b>f</b>ather or a<b>f</b>fluent</li>
+         <li>m as in la<b>m</b>b or <b>m</b>ineral</li>
+         <li>n as in <b>n</b>od or ba<b>n</b></li>
+         <li>w as in <b>w</b>eep or a<b>w</b>ake</li>
+         <li>l as in <b>l</b>inger or ba<b>ll</b>ad</li>
+         <li>y as in <b>y</b>earn or ma<b>y</b>o</li>
+      </ul>
+   </TabItem>
+</Tabs>
 
 ### Rules
 
