--- a/docs/lessons/first-steps.mdx
+++ b/docs/lessons/first-steps.mdx
@@ -123,7 +123,7 @@ be too difficult to differentiate.
 - can also be other open vowels: [a], [ɶ], [ɒ], 
 
 ##### ö - open-mid back rounded vowel [ɔ]
-- as in r**ou**pe or Camb**o**dia
+- as in r**o**pe or Camb**o**dia
 - can also be other central and back rounded vowels: [ɞ], [ɵ], [o]
 - *slightly geminated*
 
