Soften community language

--- a/docs/community.mdx
+++ b/docs/community.mdx
@@ -11,49 +11,28 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 
 # Community
 
-So, you've decided that you might actually share our excitement for the future
-or you just find our living future events cool. Now you're actually considering
-joining in on the shenanigans? Well, read on!
+So, you've decided that you want to learn and be part of this community? Well,
+read on!
 
 ## How can I join the community?
 
-The Discord community is currently reserved for Hisyëö speakers only. You cannot
-be a member until you have learned the language. There is only currently one way
-gain access to the official Discord community:
-
-> Learn the language and carry on a full conversation with one of the existing
-> community members.
-
-Just carrying out a simple conversation will not be enough. You must be:
-- respectful
-- creative, thoughtful, or kind
-- not overly interested in critical analyis ([Dunning-Kruger effect](https://en.wikipedia.org/wiki/Dunning%E2%80%93Kruger_effect))
-- interested in being an **active** participant in a growing community that
-    - plays video and board games
-    - creates literary, musical, or visual works of art
-    - translates all kinds of existing works
-    - supports planetary health through community action
-    - raises awareness of our language and community
-    - has endless conversations in Hisyëö
-
-*The community is not intended to be a public space, instead it's closer to a
-private club.* There are many public places where criticism and feedback can be
-offered. We're not looking to be another open space for language nerds to
-express their distaste—or admiration, for that matter. We are seeking to apply
-tried-and-true community-building principles to create something greater than
-just another conlang. 
+There isn't an online community yet built for this here language. We are working
+on a public discord community that will have levels that you can earn as you
+grow in the language.
 
 In addition to this enterprise, we also seek to grow the language in the public
 domain. A set of courses and tests are being developed that follow the six
 levels of the
 [CEFR](https://en.wikipedia.org/wiki/Common_European_Framework_of_Reference_for_Languages)
-standard. Eventually, some of lower course certificates and tests will replace
-the manually-curated community priveleges.
+standard. Eventually, some of lower course certificates and tests will
+supplement the manually-curated community priveleges.
 
 ## Where can I meet existing community members?
 
-Here is the list of locations where we hope to have Hisyëans available to chat
-with:
+If you'd like to discuss the language without seeking to learn it, please keep
+all those discussions to the various conglang communities of the internet. We
+also plan to have our own official precense on other sites. Here is the list of
+locations where we hope to have Hisyëans available to chat with:
 
 - Telegram
 - Reddit
