Fix some translations and add clarification

--- a/docs/lessons/first-steps.mdx
+++ b/docs/lessons/first-steps.mdx
@@ -118,6 +118,8 @@ be too difficult to differentiate.
 
 #### Vowels
 
+All example words are pronounced as in US English.
+
 ##### o - open back unrounded vowel [ɑ]
 - as in sl**o**t or f**a**ther
 - can also be other open vowels: [a], [ɶ], [ɒ], 
