--- a/docs/lessons/greetings-salutations.mdx
+++ b/docs/lessons/greetings-salutations.mdx
@@ -21,7 +21,7 @@ subordinate clause (an inner sentence). The subordinate clause acts similar to a
 allows you to refer to the action of the verb as a noun.
 
 <HisyeoTabs>
-    <p>.&emsp;<em></em>Playing on computers is awesome.</p>
+    <p>xe kelo tö öni tüek, lı küzoü.&emsp;<em></em>Playing on computers is awesome.</p>
     <p>lı küzoü ü xe kelo tö öni tüek.&emsp;<em>It is awesome to play on computers.</em></p>
     <p>noyo süko xe kelo tö öni tüek.&emsp;<em>I like playing on computers.</em></p>
 </HisyeoTabs>
@@ -44,14 +44,19 @@ fellow Hisyëans!
 ### Meeting Someone
 
 In the first sentence, we are using a simple sentence with a transitive verb,
-two pronouns and a preposition that is marking time. In the next sentence, we
-are using a deontic verb phrase coupled with propositive sentence ender to
-indicate the sentence describes a desired future and that the speaker is looking
-for agreement or approval from the listener. The sentence also uses the
-beneficiary/purpose preposition indicating what the meeting is for. Finally, the
-last sentence is where we make use of a subjective subordinate clause to
-describe the desiring (the verb of the main predicate) of an action (the
-subjective subordinate clause).
+two pronouns. This is your standard subject, verb, object sentence. With the
+addition of one preposition at the end.
+
+In the next sentence, we are using a deontic verb phrase coupled with
+propositive sentence ender. The deontic verb phrase marker indicates the
+sentence describes a *desired future*. The propositive sentence ender indicates
+the speaker is looking for agreement or approval from the listener. The sentence
+also uses the beneficiary/purpose preposition indicating what the meeting is
+for.
+
+Finally, the last sentence is where we make use of a subjective subordinate
+clause we learned about above. It indicates that an action is what is *desired*
+(the verb of the main predicate).
 
 <HisyeoTabs>
     <p>noyo monodo niün hoi suhot dus.&emsp;<em>I am meeting them at 10</em></p>
@@ -63,15 +68,12 @@ subjective subordinate clause).
 
 For the initial contact with another person, there are some common expressions
 used as pleasantries. Each one uses a subjective subordinate clause as the
-experiencer of a complement. In the first and last sentences, the complement is
-adjectival. In the middle sentence, the complement is unsaid and instead an
-adverb is provided. This kind of sentence structure allows you to link an adverb
-to the action inside of the subjective subordinate clause.
+experiencer of an adjectival complement.
 
 <HisyeoTabs>
     <p>lı xön ü xe monodo nimü löicök.&emsp;<em>It is so nice to meet you.</em></p>
-    <p>bı yübik ü xe monodo nimü.&emsp;<em>Lovely to meet you.</em></p>
     <p>lı xön ëto ü xe dëko nimü.&emsp;<em>It is great to see you.</em></p>
+    <p>lı cömël ü xe monodo nimü.&emsp;<em>Lovely to meet you.</em></p>
 </HisyeoTabs>
 
 ### Responding To A Greeting
