--- a/docs/lessons/greetings-salutations.mdx
+++ b/docs/lessons/greetings-salutations.mdx
@@ -39,7 +39,9 @@ of the sentence and avoids the need for a pause.
 ## Meet & Greet
 
 Now with some grammar under our belt, let's learn how to meet and greet your
-fellow Hisyëans!
+fellow Hisyëans! We will try to describe some of the characteristics of the
+different sentences being used in the examples. Feel free to skip over that if
+you want to just focus in on learning the phrases.
 
 ### Meeting Someone
 
@@ -78,14 +80,30 @@ experiencer of an adjectival complement.
 
 ### Responding To A Greeting
 
+The standard "thank you" can be interpreted as either being subjectless or a
+first-person subject drop. The context preposition indicates that the
+thankfulness is concerning that marked object. Use adjectives on the
+thankfulness to expand on the meaning. In the third example, we are interpeting
+the "much" as being adverbial (i.e., they have been thankful many times) and the
+added emphasis sentence ender is being used to represent "so".
+
 <HisyeoTabs>
     <p>lı konxo hön nimü.<em>Thank you.</em></p>
+    <p>lı konxo ëto hön nimü.<em>Many thanks to you.</em></p>
     <p>lı konxo bı ëto löicök.&emsp;<em>Thank you so much.</em></p>
     <p>oxon noyo ütok.&emsp;<em>For me also.</em></p>
     <p>lı xön ü xe monodo nimü ütok.&emsp;<em>It is nice to meet you too.</em></p>
 </HisyeoTabs>
 
 ### When You'll Meet Again
+
+Here, we are intepreting the mood in the English sentence as being deontic and
+the added ender of "ok?" is being filled by the propositive sentence ender. In
+the second sentence, we are interpeting the mood in the English sentence as
+being epistemic and the question word also means that it is effectively
+interrogative as well. In the third sentence, you have to be careful to remember
+that the second verb is being intepreted as the object of the active verb
+preposition. The fourth sentence makes use of the interrogative sentence ender.
 
 <HisyeoTabs>
     <p>nü küu monodo bı dizel zelen ci.&emsp;<em>Let's meet again soon, ok?</em></p>
@@ -98,6 +116,19 @@ experiencer of an adjectival complement.
 ## Introductions
 
 ### My Name Is...
+
+<HisyeoTabs>
+    <p>umo zık lı nimü.&emsp;<em>Who are you?</em></p>
+    <p>noyo lı umo Zëk.&emsp;<em>I am Jake.</em></p>
+    <p>zık lı somo nimü.&emsp;<em>What is your name?</em></p>
+    <p>somo noyo lı Keli.&emsp;<em>My name is Kelly.</em></p>
+    <p>umo somo zık müt nimü.&emsp;<em>What do people call you?</em></p>
+    <p>umo somo Ootyo müt noyo.&emsp;<em>People call me Aadhya.</em></p>
+    <p>nimü somo zık müt cızi.&emsp;<em>What do you call yourself?</em></p>
+    <p>noyo somo Ismël müt cızi.&emsp;<em>I call myself Ismail.</em></p>
+    <p>noyo yünyoü somo dizel ko.&emsp;<em>Do you have a nickname?</em></p>
+    <p>somo dizel lı Yüsılnëmu123.&emsp;<em>My nickname is UserName123.</em></p>
+</HisyeoTabs>
 
 ### Introducting others
 
