Added more determiner details

--- a/docs/reference/word_types/determiners.mdx
+++ b/docs/reference/word_types/determiners.mdx
@@ -162,7 +162,11 @@ noun-phrase. You prefix a quantity phrase with <HisyeoWord is='xokön'/>.
 </HisyeoTabs>
 
 ### Fractional
-{/* TODO */}
+
+<HisyeoTabs>
+    <p>noyo ke döstoc son fun son dus tiü icwon noyo.&emsp;<em>I will receive three thirty-fifths of my inheritance.</em></p>
+    <p>fiki yë sobüni et onö lı si niök bı son ün kut fun son.&emsp;<em>The disease rate has increased by 3 and one-third.</em></p>
+</HisyeoTabs>
 
 ## Relative
 
