--- a/docs/works/north-wind-and-the-sun.mdx
+++ b/docs/works/north-wind-and-the-sun.mdx
@@ -14,11 +14,11 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 ## kiso Woyü Söltüstık Onö Ün Binton Lono Onö
 
 <HisyeoTabs>
-    <p>ötsöto Woyü Söltüstık ün ötsöto Binton Lono bı öhël köntësto xokön dizel hön fos lı len eswen ü, binë lı öni tulutı xe lı si gik, fos ünhılun niün ü öntön libü kildo yë tüt yoüti.&emsp;<em>The North Wind and the Sun were disputing which was the stronger, when a traveler came along wrapped in a warm cloak.</em></p>
-    <p>ötsöto wofok si fos hön fos hön woküt kut ü kut niün lı bilüs oxon fos öni tulutı onö kös fos öntön niün lı fonmot sün ünhılun niün, lı len eswen en dizel.&emsp;<em>They agreed that the one who first succeeded in making the traveler take his cloak off should be considered stronger than the other.</em></p>
+    <p>ötsöto Woyü Söltüstık ün ötsöto Binton Lono bı öhël köntësto xokön dizel hön kut xe lı len eswen, binë lı öni tulutı xe lı si gik, fos ü öntön libü kildo yë tüt yoüti ünhılun.&emsp;<em>The North Wind and the Sun were disputing which was the stronger, when a traveler came along wrapped in a warm cloak.</em></p>
+    <p>ötsöto wofok si fos kut niün fos hoi kut lı bilüs oxon fos ölë öni tulutı onö kös fos öntön niün lı fonmot sün ünhılun niün, lı kut fos küu somo len eswen en dizel onö müt.&emsp;<em>They agreed that the one who first succeeded in making the traveler take his cloak off should be considered stronger than the other.</em></p>
     <p>binë ötsöto Woyü Söltüstık üslëk si bı len sumon en fos niün köi üslëk, lëkın nënko fos bı eswen ü niün üslëk, ü öni tulutı bı fëlkonö eswen ünhılun cızi tö öntön onö ün hoi fëlcin ü ötsöto Woyü Söltüstık niltügu si dënëmëk onö.&emsp;<em>Then the North Wind blew as hard as he could, but the more he blew the more closely did the traveler fold his cloak around him; and at last the North Wind gave up the attempt.</em></p>
     <p>binë ötsöto Binton Lono boifön küon bı tüt yoüti ün hoi ëfun cönkök ulyö ü öni tulutı kös si fos öntön niün lı fontmot sün ünhılun niün.&emsp;<em>Then the Sun shined out warmly, and immediately the traveler took off his cloak.</em></p>
-    <p>binë ötsöto Woyü Söltüstık küu köto fos ötsöto Binton Lono lı si len eswen yë düi niün.&emsp;<em>And so the North Wind was obliged to confess that the Sun was the stronger of the two.</em></p>
+    <p>binë ötsöto Woyü Söltüstık buswen si xe köto fos ötsöto Binton Lono lı si len eswen yë düi niün.&emsp;<em>And so the North Wind was obliged to confess that the Sun was the stronger of the two.</em></p>
 </HisyeoTabs>
 
 <HisyeoTooltip/>
