--- a/docs/works/north-wind-and-the-sun.mdx
+++ b/docs/works/north-wind-and-the-sun.mdx
@@ -14,11 +14,11 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 ## kiso Woyü Söltüstık Onö Ün Binton Lono Onö
 
 <HisyeoTabs>
-    <p>ötsöto Woyü Söltüstık ün ötsöto Binton Lono bı öhël köntësto xokön dizel hön kut xe lı len eswen, binë lı öni tulutı xe lı si gik, fos ü öntön libü kildo yë tüt yoüti ünhılun.&emsp;<em>The North Wind and the Sun were disputing which was the stronger, when a traveler came along wrapped in a warm cloak.</em></p>
-    <p>ötsöto wofok si fos kut niün fos hoi kut lı bilüs oxon fos ölë öni tulutı onö kös fos öntön niün lı fonmot sün ünhılun niün, lı kut fos küu somo len eswen en dizel onö müt.&emsp;<em>They agreed that the one who first succeeded in making the traveler take his cloak off should be considered stronger than the other.</em></p>
-    <p>binë ötsöto Woyü Söltüstık üslëk si bı len sumon en fos niün köi üslëk, lëkın nënko fos bı eswen ü niün üslëk, ü öni tulutı bı fëlkonö eswen ünhılun cızi tö öntön onö ün hoi fëlcin ü ötsöto Woyü Söltüstık niltügu si dënëmëk onö.&emsp;<em>Then the North Wind blew as hard as he could, but the more he blew the more closely did the traveler fold his cloak around him; and at last the North Wind gave up the attempt.</em></p>
-    <p>binë ötsöto Binton Lono boifön küon bı tüt yoüti ün hoi ëfun cönkök ulyö ü öni tulutı kös si fos öntön niün lı fonmot sün ünhılun niün.&emsp;<em>Then the Sun shined out warmly, and immediately the traveler took off his cloak.</em></p>
-    <p>binë ötsöto Woyü Söltüstık buswen si xe köto fos ötsöto Binton Lono lı si len eswen yë düi niün.&emsp;<em>And so the North Wind was obliged to confess that the Sun was the stronger of the two.</em></p>
-</HisyeoTabs>
+    <p>woyü söltüstık onö ün binton lono onö hoi öhël köntësto xokön dizel hön xe lı len eswen, binë lı öni tulutı xe lı si gik, fos ü öntön libü kildo yë tüt yoüti ünhılun.&emsp;<em>The North Wind and the Sun were disputing which was the stronger, when a traveler came along wrapped in a warm cloak.</em></p>
+    <p>niün wofok si fos kut niün fos hoi kut lı bilüs oxon fos öni tulutı onö kös fos öntön niün lı fonmot sün ünhılun niün, lı kut fos küu somo len eswen en dizel onö müt.&emsp;<em>They agreed that the one who first succeeded in making the traveler take his cloak off should be considered stronger than the other.</em></p>
+    <p>binë woyü söltüstık onö üslëk si bı len sumon en fos niün köi üslëk, lëkın nënko fos bı eswen ü niün üslëk, bı fëlkonö eswen ü öni tulutı onö ünhılun cızi tö öntön onö ün hoi fëlcin ü woyü söltüstık onö niltügu si dënëmëk onö.&emsp;<em>Then the North Wind blew as hard as he could, but the more he blew the more closely did the traveler fold his cloak around him; and at last the North Wind gave up the attempt.</em></p>
+    <p>binë binton lono onö boifön si küon bı tüt yoüti ün hoi ëfun cönkök ulyö ü öni tulutı onö kös si fos öntön niün lı fonmot sün ünhılun niün.&emsp;<em>Then the Sun shined out warmly, and immediately the traveler took off his cloak.</em></p>
+    <p>binë woyü söltüstık onö buswen si xe köto fos binton lono onö lı si len eswen yë düi niün.&emsp;<em>And so the North Wind was obliged to confess that the Sun was the stronger of the two.</em></p>
+</HisyeoTabs> 
 
 <HisyeoTooltip/>
