Added some bits to nouns

--- a/docs/reference/word_types/nouns.mdx
+++ b/docs/reference/word_types/nouns.mdx
@@ -1081,8 +1081,8 @@ nouns.
 
 When a verb is provided as a thematic object, it represents the archetypal
 object/patient/theme of that verb. This can be after verbs (direct objects) or
-after prepositions (thematic objects). In this position, they represent the
-nucleus of a noun phrase.
+after prepositions (thematic objects). In this position, they are the nucleus of
+a noun phrase.
 
 <HisyeoTabs>
     <p>nimü ke cöüfon mokon xe gıtno biek, ko.&emsp;<em>"Will you make me a sandwich?"</em> <small>(lit. You will cook food that is between bread, yes?)</small></p>
@@ -1091,24 +1091,24 @@ nucleus of a noun phrase.
 Here <HisyeoWord is='mokon'/> is being used as direct obect noun of the action
 "to cook". The thing that we cook (the position of the direct object) is called
 a "meal" and the thing that we eat is known as "food". Here, the "meal" is quite
-simply "food" in apposition.
+simply "food" in [apposition](https://en.wikipedia.org/wiki/Apposition).
 
 #### Genitive Phrases
 
-A highly useful kind of thematic relation is the genitive phrase directly
-following another noun phrase connected by the <HisyeoWord is='yë'/> particle.
+A verb can act as a noun when connected to a noun phrase using the <HisyeoWord is='yë'/> particle.
 
 <HisyeoTabs>
-    <p>müt noyo küu oköt dıbo öfo yë conwëbo&emsp;<em>"Bring me that box of goods"</em></p>
+    <p>müt noyo küu oköt dıbo öfo yë conwëbo.&emsp;<em>"Bring me that box of goods."</em></p>
+    <p>küu wëko yogö onö hoi dıbo yë kelo et onö.&emsp;<em>"Put the pieces in the game box."</em></p>
 </HisyeoTabs>
 
 #### Abstract Nouns
 
-There is a special coupling particle (<HisyeoWord is='kon'/>) that converts any
-content word directly after it into a noun with abstract connotations that can
-be translated into English as "matters of" or "acts of". Additionally, this form
-is often used as the equivalent of simple gerunds where there's no additional
-thematic context needed.
+There is a special coupling particle (<HisyeoWord is='kon'/>) that can convert
+verbs directly after it into a noun with abstract connotations that can be
+translated into English as "matters of" or "acts of". This form is often used as
+the equivalent of simple gerunds where there's no additional thematic context
+needed.
 
 <HisyeoTabs>
     <p>timiok kon wëtodü yë towë wik pipök&emsp;<em>"bald eagle"</em> <small>(lit. hunting bird of white head feathers)</small></p>
@@ -1117,9 +1117,9 @@ thematic context needed.
 
 #### Agentive Nouns
 
-There are two more particles that can convert content words into nouns and they
-are both agentive in nature. This means that the final coupled noun is
-considered an agent of some action or state. For the first particle (<HisyeoWord is='öni'/>),
+There are two more particles that can convert verbs into nouns and they are both
+agentive in nature. This means that the final coupled noun is considered an
+agent of some action or state. For the first particle (<HisyeoWord is='öni'/>),
 the entity is a directly engaged in the action or experiencing the state. For
 the second particle (<HisyeoWord is='foko'/>), the agent is causing something
 else to engage in the action or experience the state.
@@ -1154,26 +1154,32 @@ useful: it allows you to describe a quality with some modifiers of its own. One
 of the most common usages is when adding a degree to a modifier:
 
 <HisyeoTabs>
-  <p>töxütsı bümi yë ıwotë ëto</p>
+  <p>töxütsı bümi yë ıwotë ëto&emsp;<em>"very tall mountain"</em></p>
 </HisyeoTabs>
 
 Since Hisyëö has less than 900 words, using genitive phrases with modifiers
 allows you to create more complex phrases that would require several sentences
-to formulate otherwise. 
+to formulate otherwise. In fact, modifiers can also be used with <HisyeoWord is='kon'/>, <HisyeoWord is='öni'/>,
+and <HisyeoWord is='foko'/> to make modifier-based abstract and agentive nouns.
+
+<HisyeoTabs>
+    <p>foko liülë yë ënkömön longı et küyö&emsp;<em>"a sad clown"</em></p>
+    <p>kolowo kon xobo foko dës tönkö&emsp;<em>"non-violent martial arts"</em></p>
+</HisyeoTabs>
 
 ## Noun Clauses
 
 A noun can be concrete or abstract, it doesn't have to be some physical entity
 or even a finite state. It can be a process or really anything that you might
 want to refer to and use as a subject or object of a sentence. In Hisyëö, you
-can create these complex nouns by building sentences within a special clause
+can create these complex nouns by building sentences within a subordinate clause
 called a **Noun Clause**. In order to create one of these clauses, you must
-start with a particle. There are two special words available that can be used
-to introduce a noun clause:
+start with a particle. There are two special words available that can be used to
+introduce a noun clause:
 
 <ol>
   <li><HisyeoWord is='xe'/> - Use this one for infinitives and gerunds</li>
-  <li><HisyeoWord is='fos'/> - Use this one for complete inner sentences</li>
+  <li><HisyeoWord is='fos'/> - Use this one for complete inner sentences and indirect questions</li>
 </ol>
 
 After this particle, you start your sentence. In the infinitive/gerund form, you
@@ -1183,7 +1189,8 @@ expressed by the inner sentence but referred holisitically as an object in the
 outer sentence.
 
 <HisyeoTabs>
-  <p>lı ëo govon ölë noyo ü <strong>xe</strong> cöüfon micin.&emsp;<em>"Cooking fish makes me disgusted"</em></p>
+  <p>lı ëo govon ölë noyo ü <strong>xe</strong> cöüfon micin.&emsp;<em>"Cooking fish makes me disgusted."</em></p>
+  <p><strong>xe</strong> golo, lı xön oxon umo xonluk.&emsp;<em>"Reading is good for kids."</em></p>
 </HisyeoTabs>
 
 
@@ -1211,11 +1218,11 @@ part in human life or otherwise.
 
 The other form of noun phrase (<HisyeoWord is='fos'/>) includes a subject or if
 one is not provided then, like a normal sentence, it should be intepreted as
-"there is" or "it is" depending on the predicate that is provided. This form of
-noun phrase is useful when you need to introduce a clause that changes (or
-removes) the subject from the underlying sentence. Some verbs primarily are used
-with some form of noun clause as their object and this form allows for a
-complete sentence to be included as that object.
+subjectless ("there is" or "it is") depending on the predicate that is provided.
+This form of noun phrase is useful when you need to introduce a clause that
+changes (or removes) the subject from the underlying sentence. Some verbs
+primarily are used with some form of noun clause as their object and this form
+allows for a complete sentence to be included as that object.
 
 <HisyeoTabs>
   <p>noyo fölun fos nimü fölun noyo&emsp;<em>"I want you to want me"</em></p>
@@ -1226,7 +1233,7 @@ complete sentence to be included as that object.
 :::note English indirect object
 
 The English sentence in the translation above "I want you to want me" is using
-an indirect object of "you" and an direct object infinitve phrase of "to want
+an indirect object of "you" and an direct object infinitive phrase of "to want
 me". This might seem like the wrong translation since there is a preposition
 that Hisyëö typically uses for indirect objects. This is just an example of some
 of the irregular English grammar around the use of the verb "to want". In
@@ -1234,6 +1241,29 @@ Hisyëö, the best approach is to use a finite noun phrase where the indirect
 object of the English sentence is now the subject of the inner noun clause.
 
 :::
+
+### Thematic Noun Clauses
+
+When you use a noun clause as the nucleus of a thematic relation phrase, it has
+some special meanings:
+
+- Manner/Material: Accusative Relative Clause (Describes the direct object)
+- Instrument/Means: Nominal Subordinate Clause
+- Location/Time: Iterative Condition Subordinate Clause ("whenever")
+- Direction/Destination: Terminative Condition Subordinate Clause ("until")
+- Source/Origin: Inchoative Condition Subordinate Clause ("since")
+- Beneficiary/Purpose: Nominal Subordinate Clause
+- Cause: Nominal Subordinate Clause
+- Collaborator: Corrective Subordinate Clause (Describes a change in the action)
+- Context/Condition: Perfective Condition Subordinate Clause ("if")
+- Counter-Agent: Nominal Subordinate Clause
+- Evidence: Nominal Subordinate Clause
+- Distance/Duration: Durative Condition Subordinate Clause ("while", "during")
+- Intermediate: Nominal Subordinate Clause
+- Similative: Comparative Condition Subordinate Clause ("as if")
+
+
+### Relative Clauses
 
 There are other uses of these same clause particles as relative clause
 introducers and you can learn more about those usages in the Modifiers chapter.
