--- a/docs/reference/word_types/nouns.mdx
+++ b/docs/reference/word_types/nouns.mdx
@@ -1230,7 +1230,7 @@ allows for a complete sentence to be included as that object.
 </HisyeoTabs>
 
 
-:::note English indirect object
+:::info English indirect object
 
 The English sentence in the translation above "I want you to want me" is using
 an indirect object of "you" and an direct object infinitive phrase of "to want
@@ -1244,28 +1244,145 @@ object of the English sentence is now the subject of the inner noun clause.
 
 ### Thematic Noun Clauses
 
-When you use a noun clause as the nucleus of a thematic relation phrase, it has
-some special meanings:
+When you use a subordinate clause as the nucleus of a thematic relation phrase,
+it often takes on a special meaning due to the combination of a thematic role
+and the non-concrete nature of subordinate clauses. Here's a list of the
+different interpretations:
 
-- Manner/Material: Accusative Relative Clause (Describes the direct object)
-- Instrument/Means: Nominal Subordinate Clause
-- Location/Time: Iterative Condition Subordinate Clause ("whenever")
-- Direction/Destination: Terminative Condition Subordinate Clause ("until")
-- Source/Origin: Inchoative Condition Subordinate Clause ("since")
-- Beneficiary/Purpose: Nominal Subordinate Clause
-- Cause: Nominal Subordinate Clause
-- Collaborator: Corrective Subordinate Clause (Describes a change in the action)
-- Context/Condition: Perfective Condition Subordinate Clause ("if")
-- Counter-Agent: Nominal Subordinate Clause
-- Evidence: Nominal Subordinate Clause
-- Distance/Duration: Durative Condition Subordinate Clause ("while", "during")
-- Intermediate: Nominal Subordinate Clause
-- Similative: Comparative Condition Subordinate Clause ("as if")
+#### Manner/Material: Accusative Relative Clause
+
+Possibly the most unique of the bunch, due to the fact that this thematic
+relation is normally used for describing the action directly. When the
+manner/material thematic role is applied to a *noun clause*, it amends the
+description of the **direct object** as a relative clause.
+
+<HisyeoTabs>
+    <p>bı fos bı ubënus wuitsi xe ogolol, noyo lunsol si gundolë nubuso yë zomo onö bı len sumon en fos noyo köi tüu.&emsp;<em>"Barely keeping a grip on it, I throw the dog's wet ball as hard as I can."</em></p>
+    <p>bı fos unon iskö cübü ün biek sün, nü dënëmëk xe yosten gufuyo kon iskö onö hoi sınsi cüti onö.&emsp;<em>"Smelling of beer and bread, we searched the small town for the local tavern."</em></p>
+    <p>bı xe sıtyo hoi mötö onö, lı zowo xe tö hoköli ogolol si sıskın wohi nimü.&emsp;<em>"Sitting by the fire was the dog that bit your sister."</em></p>
+</HisyeoTabs>
+
+:::caution Why the shift in meaning
+
+It might seem like this should just describe the manner since that's what this
+thematic relation is for. But, it isn't used for that in this case because the
+primary sentence structure is already the place where all simultaneous
+predicates exist. That is to say, if you are describing the *action* by further
+utilizing another verb (and you are thinking about using a subordinate clause),
+you can place this verb as another predicate within the main sentence body
+instead of using a thematic relation marker. This frees up this marker (when
+supplied with a subordinate clause) to be used for describing the direct object.
+Semantically, this is the only valid place that can take a relative clause.
+Given that this marker is the only one that applies the supplied noun phrase
+*adverbially*, it follows that any subordinate clause should be interpreted as
+being related to the nucleus of the direct object.
+
+:::
+
+
+
+#### Instrument/Means: Nominal Subordinate Clause
+
+When the instrument/means thematic role is applied to a *noun clause*, it does
+not have a special interpretation because there are already reasonable
+situations where an instrument or means could be described using a subordinate
+clause.
+
+#### Location/Time: Iterative Condition Subordinate Clause
+
+When the location/time thematic role is applied to a *noun clause*, it has a
+special interpretation because there's no valid situation where a location or a
+time could be a full predicate. Just like the other thematic roles, the usage of
+this thematic relation with a subordinate clause is still meant to be
+semantically relevant. Thus, the meaning is taken as an **iterative condition**
+which in English can be interepreted as a clause prefaced by "whenever".
+
+#### Direction/Destination: Terminative Condition Subordinate Clause
+
+When the direction/destination thematic role is applied to a *noun clause*, it
+has a special interpretation because there's no valid situation where a
+direction or a destination could be a full predicate. Just like the other
+thematic roles, the usage of this thematic relation with a subordinate clause is
+still meant to be semantically relevant. Thus, the meaning is taken as a
+**terminative condition** which in English can be interepreted as a clause
+prefaced by "until".
+
+#### Source/Origin: Inchoative Condition Subordinate Clause
+
+When the source/origin thematic role is applied to a *noun clause*, it has a
+special interpretation because there's no valid situation where a source or an
+origin could be a full predicate. Just like the other thematic roles, the usage
+of this thematic relation with a subordinate clause is still meant to be
+semantically relevant. Thus, the meaning is taken as a **inchoative condition**
+which in English can be interepreted as a clause prefaced by "since".
+
+#### Beneficiary/Purpose: Nominal Subordinate Clause
+
+When the beneficiary/purpose thematic role is applied to a *noun clause*, it
+does not have a special interpretation because there are already reasonable
+situations where a beneficiary or purpose could be described using a subordinate
+clause.
+
+#### Cause: Nominal Subordinate Clause
+
+When the cause thematic role is applied to a *noun clause*, it does not have a
+special interpretation because there are already reasonable situations where a
+cause could be described using a subordinate clause.
+
+#### Collaborator: Nominal Subordinate Clause
+
+When the collaborator thematic role is applied to a *noun clause*, it does not
+have a special interpretation because there are already reasonable situations
+where a collaborator could be described using a subordinate clause.
+
+#### Context/Condition: Perfective Condition Subordinate Clause
+
+When the context/condition thematic role is applied to a *noun clause*, they do
+reflect normal subordinate clauses but since this thematic relation fits the
+special class of context/condition, there's a special way to intepret its usage
+wth noun clauses. The meaning is taken as a **perfective condition** which in
+English can be interepreted as a clause prefaced by "if".
+
+#### Counter-Agent: Nominal Subordinate Clause
+
+When the counter-agent thematic role is applied to a *noun clause*, it does not
+have a special interpretation because there are already reasonable situations
+where a counter-agent could be described using a subordinate clause.
+
+#### Evidence: Nominal Subordinate Clause
+
+When the evidence thematic role is applied to a *noun clause*, it does not
+have a special interpretation because there are already reasonable situations
+where a evidence could be described using a subordinate clause.
+
+#### Distance/Duration: Durative Condition Subordinate Clause
+
+When the distance/duration thematic role is applied to a *noun clause*, it has a
+special interpretation because there's no valid situation where a distance or a
+duration could be a full predicate. Just like the other thematic roles, the
+usage of this thematic relation with a subordinate clause is still meant to be
+semantically relevant. Thus, the meaning is taken as a **continuative
+condition** which in English can be interepreted as a clause prefaced by "while"
+or "during".
+
+#### Intermediate: Nominal Subordinate Clause
+
+When the intermediate thematic role is applied to a *noun clause*, it does not
+have a special interpretation because there are already reasonable situations
+where a intermediate could be described using a subordinate clause.
+
+#### Similative: Comparative Condition Subordinate Clause
+
+When the similative thematic role is applied to a *noun clause*, they do
+reflect normal subordinate clauses but since this thematic relation fits the
+special similative class, there's a special way to intepret its usage
+wth noun clauses. The meaning is taken as a **comparative condition** which in
+English can be interepreted as a clause prefaced by "as if".
 
 
 ### Relative Clauses
 
 There are other uses of these same clause particles as relative clause
-introducers and you can learn more about those usages in the Modifiers chapter.
+introducers and you can learn more about those usages [here](modifiers#relative-clauses).
 
 <HisyeoTooltip/>
